@@ -8,6 +8,7 @@ import objc.builder
 objc.builder.build_applet(
 	app_name= 'CurrencyConverterPY',
 	main_py = 'CurrencyConverter.py',
-	extra_files = ['English.lproj/MainMenu.nib'])
+	extra_files = ['English.lproj/MainMenu.nib'],
+	extra_src = ['nibwrapper.py'] )
 # NOTE: We'd like to use just 'English.lproj', but buildtools.py gets 
 # confused by that....
